<resources>
    <string name="app_name">App Coletor</string>

    <string name="botao_buscar">Buscar</string>
    <string name="botao_alterar">Alterar</string>
    <string name="botao_excluir">Excluir</string>
    <string name="botao_limpar">Limpar</string>
    <string name="botao_lancar">Lançar</string>
    <string name="botao_sair">Sair</string>
    <string name="botao_flash">Flash</string>
    <string name="botao_salvar">Salvar</string>
    <string name="botao_cancelar">Cancelar</string>
    <string name="botao_ok">OK</string>
    <string name="botao_login">Entrar</string>
    <string name="botao_logout">Desconectar</string>
    <string name="botao_configurar">Configurar</string>
    <string name="botao_iniciar">Iniciar</string>
    <string name="botao_nova_coleta">Nova Coleta</string>
    <string name="botao_estou_ciente">Estou Ciente</string>

    <string name="coluna_item_id">Código</string>
    <string name="coluna_item_descricao">Descrição</string>
    <string name="coluna_item_qnt_na_emb">Qnt. na Emb.</string>
    <string name="coluna_item_qnt_emb">Qnt. de Emb.</string>
    <string name="coluna_item_qnt_total">Qnt. Total</string>
    <string name="coluna_item_vencimento">Venc.</string>

    <string name="hint_qnt_total">QNT Total</string>
    <string name="hint_qnt_emb">QNT de Emb.</string>
    <string name="hint_qnt_na_emb">QNT na Emb.</string>
    <string name="hint_ean">EAN</string>
    <string name="hint_nota_fiscal">Nota Fiscal</string>
    <string name="hint_cnpj">CNPJ</string>
    <string name="hint_chave">Chave</string>
    <string name="hint_validade">Validade</string>
    <string name="hint_usuario">Digite o usuário</string>
    <string name="hint_senha">Digite sua senha</string>
</resources>