<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/edtCnpjCfp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:tooltipText="@string/hint_cnpj"
            android:inputType="number"
            android:hint="@string/hint_cnpj"
            android:layout_weight="2"/>

        <EditText
            android:id="@+id/edtNumeroNotaFiscal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:tooltipText="@string/hint_nota_fiscal"
            android:inputType="number"
            android:hint="@string/hint_nota_fiscal"
            android:layout_weight="1"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnIniciarColeta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/botao_iniciar" />

        <Button
            android:id="@+id/btnBuscarColeta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/botao_buscar" />

        <Button
            android:id="@+id/btnAlterarColeta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/botao_alterar" />

        <Button
            android:id="@+id/btnExcluirColeta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/botao_excluir"/>
    </LinearLayout>

    <TextView
        android:id="@+id/txvRazaoSocial"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txvDataMvto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/txvPedidoId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
    </LinearLayout>

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="@string/coluna_produto_id" />

        </TableRow>

        <!--Usar mesma medidas das colunas no layout de itens
        <ListView
            android:id="@+id/listLancamentoColeta"
            android:layout_width="wrap_content"
            android:layout_height="300dp">

        </ListView>-->
    </TableLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/edtEan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:tooltipText="@string/hint_ean"
            android:inputType="number"
            android:hint="@string/hint_ean"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/txvDescricao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/edtQntNaEmb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/hint_qnt_na_emb"
            android:inputType="numberDecimal"
            android:tooltipText="@string/hint_qnt_na_emb" />

        <EditText
            android:id="@+id/edtQntEmb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:tooltipText="@string/hint_qnt_emb"
            android:inputType="number"
            android:hint="@string/hint_qnt_emb"
            android:layout_weight="1"/>

        <EditText
            android:id="@+id/edtQntTotal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:tooltipText="@string/hint_qnt_total"
            android:inputType="numberDecimal"
            android:hint="@string/hint_qnt_total"
            android:layout_weight="1"/>

    </LinearLayout>

    <DatePicker
        android:id="@+id/dpkValidade"
        android:layout_width="wrap_content"
        android:layout_height="120dp"
        android:layout_gravity="center"
        android:datePickerMode="spinner"
        android:calendarViewShown="false"
        android:hint="@string/hint_validade"
        android:tooltipText="@string/hint_validade" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnLancar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/botao_lancar"/>

        <Button
            android:id="@+id/btnLimpar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/botao_limpar"/>

        <Button
            android:id="@+id/btnAlterarItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/botao_alterar"/>

        <Button
            android:id="@+id/btnExcluirItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/botao_excluir"/>

    </LinearLayout>

    <Button
        android:id="@+id/btnNovaColeta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:text="@string/botao_nova_coleta"/>
</LinearLayout>